--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^17.3.1",
         "express": "^5.1.0",
         "mongoose": "^8.19.2"
     }
